2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (rpcwu_cancel): New.
	(rpcwu_with_network): Call set_entertainment_cancel with it.
	(rcpwu_clos, rpcwu_clos): Renamed former to latter, changed all
	users.
	(maybe_refresh_package_cache_without_user): Partially reverted
	change from 2008-04-15: only check when the 'check_interval' has
	passed or red_pill_check_always is true, irrespective of red-pill
	mode.
	(create_toolbar): Put refresh button in toolbar when
	red_pill_check_always is false.

2008-04-22  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.cc set_entertainment_system_modal): New
	function to convert the entertainment dialog into a system modal
	dialog.

	* src/operations.cc (ip_warn_about_reboot_response): Call to
	set_entertainment_system_modal right after starting the
	installation of a package which requires to reboot.

	* utils/maemo-confirm-text-user.c: Done a cleanup of unused code
	since changes done to make the dialog system modal.
	(find_window_1): Removed.
	(find_window): Removed.
	(find_application_manager_window): Removed.
	(dialog_realized): Removed.
	(main): Removed connection to signal "realize" for the dialog.

2008-04-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker.cc (find_catalogues_for_item_desc): Return a
	GList of catalogues matching the item's URI instead of just one
	element, cause one error could belong to several items (N84465).
	(update_package_cache): Look for a list of catalogues matching a
	failing URI to properly add each error to all of them (N84465).

2008-04-17  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (start_entertaining_user): Use GDK hints instead of
	gtk_widget_set_size_request for setting a fixed width for the
	dialog, since it behaves better when it's needed for the dialog
	to both grow and shrink as the main label changes (N83057)

2008-04-16  Marius Vollmer  <marius.vollmer@nokia.com>
